# BoostStateMachine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml  docker-publish.yml
dep/: README.md
docs/: ACKNOWLEDGEMENTS.md  CHANGELOG.md
docs/doxygen-html/: add_8hpp_source.html  cppStandard_8hpp.html  cppStandard_8hpp_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  mainTest_8hpp_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  navtreedata.js  navtreeindex0.js
docs/doxygen-html/search/: searchdata.js
docs/gcov-html/: index.html
lib/: CMakeLists.txt  boostStatemachine.hpp
scripts/: exec.sh  execClang.sh  execNinja.sh  runCoverage.sh  runDoxygen.sh  runSubmodule.sh
scripts/Doxygen/: doxyfile.conf
scripts/clang-format/: README.md
scripts/clang-tools/: README.md
scripts/cmake/: catch2Test.cmake  ccache.cmake  compilerWarnings.cmake  depPckg.cmake  nativePckg.cmake  updateSubmodule.cmake
src/: CMakeLists.txt  cppStandard.hpp  main.cpp
test/: CMakeLists.txt  addTest.cpp
